忽略编辑器文件

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,170 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/libraries/Maven__ch_qos_logback_logback_classic_1_2_3.xml
+.idea/libraries/Maven__ch_qos_logback_logback_core_1_2_3.xml
+.idea/libraries/Maven__com_alibaba_druid_1_1_10.xml
+.idea/libraries/Maven__com_fasterxml_classmate_1_3_4.xml
+.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_annotations_2_9_0.xml
+.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_core_2_9_6.xml
+.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_databind_2_9_6.xml
+.idea/libraries/Maven__com_fasterxml_jackson_datatype_jackson_datatype_jdk8_2_9_6.xml
+.idea/libraries/Maven__com_fasterxml_jackson_datatype_jackson_datatype_jsr310_2_9_6.xml
+.idea/libraries/Maven__com_fasterxml_jackson_module_jackson_module_parameter_names_2_9_6.xml
+.idea/libraries/Maven__com_github_jsqlparser_jsqlparser_1_0.xml
+.idea/libraries/Maven__com_github_pagehelper_pagehelper_5_1_1.xml
+.idea/libraries/Maven__com_github_virtuald_curvesapi_1_04.xml
+.idea/libraries/Maven__com_google_guava_guava_20_0.xml
+.idea/libraries/Maven__com_jayway_jsonpath_json_path_2_4_0.xml
+.idea/libraries/Maven__com_vaadin_external_google_android_json_0_0_20131108_vaadin1.xml
+.idea/libraries/Maven__com_zaxxer_HikariCP_2_7_9.xml
+.idea/libraries/Maven__commons_codec_commons_codec_1_11.xml
+.idea/libraries/Maven__commons_logging_commons_logging_1_2.xml
+.idea/libraries/Maven__io_springfox_springfox_core_2_9_2.xml
+.idea/libraries/Maven__io_springfox_springfox_schema_2_9_2.xml
+.idea/libraries/Maven__io_springfox_springfox_spi_2_9_2.xml
+.idea/libraries/Maven__io_springfox_springfox_spring_web_2_9_2.xml
+.idea/libraries/Maven__io_springfox_springfox_swagger2_2_9_2.xml
+.idea/libraries/Maven__io_springfox_springfox_swagger_common_2_9_2.xml
+.idea/libraries/Maven__io_swagger_swagger_annotations_1_5_20.xml
+.idea/libraries/Maven__io_swagger_swagger_models_1_5_20.xml
+.idea/libraries/Maven__javax_annotation_javax_annotation_api_1_3_2.xml
+.idea/libraries/Maven__javax_persistence_persistence_api_1_0.xml
+.idea/libraries/Maven__javax_servlet_javax_servlet_api_3_1_0.xml
+.idea/libraries/Maven__javax_validation_validation_api_2_0_1_Final.xml
+.idea/libraries/Maven__junit_junit_4_12.xml
+.idea/libraries/Maven__net_bytebuddy_byte_buddy_1_7_11.xml
+.idea/libraries/Maven__net_bytebuddy_byte_buddy_agent_1_7_11.xml
+.idea/libraries/Maven__net_minidev_accessors_smart_1_2.xml
+.idea/libraries/Maven__net_minidev_json_smart_2_3.xml
+.idea/libraries/Maven__org_apache_commons_commons_collections4_4_1.xml
+.idea/libraries/Maven__org_apache_commons_commons_lang3_3_3_2.xml
+.idea/libraries/Maven__org_apache_httpcomponents_httpclient_4_5_3.xml
+.idea/libraries/Maven__org_apache_httpcomponents_httpcore_4_4_9.xml
+.idea/libraries/Maven__org_apache_httpcomponents_httpmime_4_5_3.xml
+.idea/libraries/Maven__org_apache_logging_log4j_log4j_api_2_10_0.xml
+.idea/libraries/Maven__org_apache_logging_log4j_log4j_to_slf4j_2_10_0.xml
+.idea/libraries/Maven__org_apache_poi_poi_3_16.xml
+.idea/libraries/Maven__org_apache_poi_poi_ooxml_3_16.xml
+.idea/libraries/Maven__org_apache_poi_poi_ooxml_schemas_3_16.xml
+.idea/libraries/Maven__org_apache_poi_poi_scratchpad_3_16.xml
+.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_core_8_5_31.xml
+.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_el_8_5_31.xml
+.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_websocket_8_5_31.xml
+.idea/libraries/Maven__org_apache_xmlbeans_xmlbeans_2_6_0.xml
+.idea/libraries/Maven__org_assertj_assertj_core_3_9_1.xml
+.idea/libraries/Maven__org_freemarker_freemarker_2_3_28.xml
+.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
+.idea/libraries/Maven__org_hamcrest_hamcrest_library_1_3.xml
+.idea/libraries/Maven__org_hibernate_validator_hibernate_validator_6_0_10_Final.xml
+.idea/libraries/Maven__org_jboss_logging_jboss_logging_3_3_2_Final.xml
+.idea/libraries/Maven__org_mapstruct_mapstruct_1_2_0_Final.xml
+.idea/libraries/Maven__org_mockito_mockito_core_2_15_0.xml
+.idea/libraries/Maven__org_mongodb_bson_3_6_4.xml
+.idea/libraries/Maven__org_mongodb_mongodb_driver_3_6_4.xml
+.idea/libraries/Maven__org_mongodb_mongodb_driver_core_3_6_4.xml
+.idea/libraries/Maven__org_mybatis_mybatis_3_4_6.xml
+.idea/libraries/Maven__org_mybatis_mybatis_spring_1_3_2.xml
+.idea/libraries/Maven__org_mybatis_spring_boot_mybatis_spring_boot_autoconfigure_1_3_2.xml
+.idea/libraries/Maven__org_mybatis_spring_boot_mybatis_spring_boot_starter_1_3_2.xml
+.idea/libraries/Maven__org_objenesis_objenesis_2_6.xml
+.idea/libraries/Maven__org_ow2_asm_asm_5_0_4.xml
+.idea/libraries/Maven__org_projectlombok_lombok_1_16_22.xml
+.idea/libraries/Maven__org_skyscreamer_jsonassert_1_5_0.xml
+.idea/libraries/Maven__org_slf4j_jul_to_slf4j_1_7_25.xml
+.idea/libraries/Maven__org_slf4j_log4j_over_slf4j_1_7_25.xml
+.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_25.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_autoconfigure_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_configuration_processor_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_data_mongodb_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_freemarker_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_jdbc_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_json_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_logging_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_test_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_tomcat_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_web_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_test_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_test_autoconfigure_2_0_3_RELEASE.xml
+.idea/libraries/Maven__org_springframework_data_spring_data_commons_2_0_8_RELEASE.xml
+.idea/libraries/Maven__org_springframework_data_spring_data_mongodb_2_0_8_RELEASE.xml
+.idea/libraries/Maven__org_springframework_plugin_spring_plugin_core_1_2_0_RELEASE.xml
+.idea/libraries/Maven__org_springframework_plugin_spring_plugin_metadata_1_2_0_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_aop_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_beans_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_context_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_context_support_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_core_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_expression_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_jcl_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_jdbc_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_test_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_tx_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_web_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_springframework_spring_webmvc_5_0_7_RELEASE.xml
+.idea/libraries/Maven__org_xmlunit_xmlunit_core_2_5_1.xml
+.idea/libraries/Maven__org_yaml_snakeyaml_1_19.xml
+.idea/libraries/Maven__stax_stax_api_1_0_1.xml
+.idea/libraries/Maven__tk_mybatis_mapper_3_4_3.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+motorcli-springboot-common/motorcli-springboot-common.iml
+motorcli-springboot-common/target/maven-archiver/pom.properties
+motorcli-springboot-common/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+motorcli-springboot-common/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+motorcli-springboot-datasource/motorcli-springboot-datasource.iml
+motorcli-springboot-datasource/target/classes/META-INF/spring-configuration-metadata.json
+motorcli-springboot-datasource/target/maven-archiver/pom.properties
+motorcli-springboot-datasource/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+motorcli-springboot-datasource/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+motorcli-springboot-mongodb/motorcli-springboot-mongodb.iml
+motorcli-springboot-mongodb/target/maven-archiver/pom.properties
+motorcli-springboot-mongodb/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+motorcli-springboot-mongodb/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+motorcli-springboot-mybatis/motorcli-springboot-mybatis.iml
+motorcli-springboot-mybatis/target/classes/META-INF/spring-configuration-metadata.json
+motorcli-springboot-mybatis/target/maven-archiver/pom.properties
+motorcli-springboot-mybatis/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+motorcli-springboot-mybatis/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+motorcli-springboot-restfull/motorcli-springboot-restfull.iml
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/api.html
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/favicon-16x16.png
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/favicon-32x32.png
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/open-sans-v15-latin-700.woff
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/open-sans-v15-latin-700.woff2
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/open-sans-v15-latin-regular.woff
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/open-sans-v15-latin-regular.woff2
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/source-code-pro-v7-latin-300.woff
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/source-code-pro-v7-latin-300.woff2
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/source-code-pro-v7-latin-600.woff
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/source-code-pro-v7-latin-600.woff2
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/titillium-web-v6-latin-600.woff
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/titillium-web-v6-latin-600.woff2
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/titillium-web-v6-latin-700.woff
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/titillium-web-v6-latin-700.woff2
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/titillium-web-v6-latin-regular.woff
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/fonts/titillium-web-v6-latin-regular.woff2
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/oauth2-redirect.html
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/springfox.all.js
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/springfox.css
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/springfox.js
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/swagger-ui-bundle.js
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/swagger-ui-bundle.js.map
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/swagger-ui-standalone-preset.js
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/swagger-ui-standalone-preset.js.map
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/swagger-ui.css
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/swagger-ui.css.map
+motorcli-springboot-restfull/target/classes/META-INF/resources/webjars/motorcli/restfull/swagger-ui.js.map
+motorcli-springboot-restfull/target/maven-archiver/pom.properties
+motorcli-springboot-restfull/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+motorcli-springboot-restfull/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+motorcli-springboot-web/motorcli-springboot-web.iml
+motorcli-springboot-web/target/maven-archiver/pom.properties
+motorcli-springboot-web/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+motorcli-springboot-web/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+motorcli-springboot.iml
