Api 模块添加 Auth 验证

--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,9 @@ motorcli-springboot-web/target/maven-status/maven-compiler-plugin/compile/defaul
 motorcli-springboot.iml
 .idea/dictionaries/Li.xml
 motorcli-springboot-restful/motorcli-springboot-restful.iml
+.idea/uiDesigner.xml
+.idea/libraries/Maven__org_springframework_security_spring_security_web_5_0_6_RELEASE.xml
+.idea/libraries/Maven__org_springframework_security_spring_security_core_5_0_6_RELEASE.xml
+.idea/libraries/Maven__org_springframework_security_spring_security_config_5_0_6_RELEASE.xml
+.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_security_2_0_3_RELEASE.xml
+.idea/libraries/Maven__io_jsonwebtoken_jjwt_0_9_1.xml
