--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,4 @@ motorcli-springboot-restful/motorcli-springboot-restful.iml
 .idea/libraries/Maven__org_springframework_security_spring_security_config_5_0_6_RELEASE.xml
 .idea/libraries/Maven__org_springframework_boot_spring_boot_starter_security_2_0_3_RELEASE.xml
 .idea/libraries/Maven__io_jsonwebtoken_jjwt_0_9_1.xml
+.idea/vcs.xml
